--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,12 +5,11 @@ cmake_minimum_required(VERSION 3.15)
 # set(CMAKE_OSX_DEPLOYMENT_TARGET 10.4)
 # set(CMAKE_OSX_ARCHITECTURES "i386;x86_64")
 
-include(pd.build/pd.cmake)
+include(Libraries/pd.build/pd.cmake)
 project(hoa)
 
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
-set_pd_sources(${PROJECT_SOURCE_DIR}/pd/src/)
 set_pd_external_path("${PROJECT_SOURCE_DIR}/hoa/")
 
 file(GLOB hoa_library_src ${PROJECT_SOURCE_DIR}/hoa.library/Sources/*.cpp ${PROJECT_SOURCE_DIR}/hoa.library/Sources/*.hpp)
